--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="row justify-content-center align-items-center border border-success vh-100">
+    <div class="row m-0 justify-content-center align-items-center border border-success vh-100">
 
         <div class="col-lg-2 col-12 border shadow rounded p-2 calculator">
 
